Fix all asset paths to be relative for GitHub Pages base tag

--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -15,7 +15,7 @@
                 <div class="col-lg-2">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="/img/logo.png" alt="">
+                            <img src="img/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                                 <li><a href="about-us.html">About Us</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                                 <li id="navProfile" style="display: none;"><a href="#!" style="display: inline-block; padding: 27px 0; margin-right: 42px; line-height: 16px; vertical-align: middle;">
-                                    <img id="navProfileImage" src="/profile_img/default.jpg" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; vertical-align: middle; margin: 0; padding: 0;">
+                                    <img id="navProfileImage" src="profile_img/default.jpg" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; vertical-align: middle; margin: 0; padding: 0;">
                                     <i class="fa fa-user-circle" id="navProfileIcon" style="font-size: 1.8rem; vertical-align: middle; line-height: 16px; margin: 0; padding: 0;"></i>
                                 </a>
                                     <ul class="dropdown">
@@ -107,3 +107,5 @@
     </div>
 </header>
 <!-- Header End -->
+
+
