Fix all paths to use absolute paths with /MaximusHotel/ prefix for GitHub Pages

--- a/layouts/header.html
+++ b/layouts/header.html
@@ -4,22 +4,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Maximus - Room Booking</title>
-<link rel="icon" href="img/favicon.png" />
+<link rel="icon" href="/MaximusHotel/img/favicon.png" />
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css?family=Lora:400,700&amp;display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&amp;display=swap" rel="stylesheet">
 
 <!-- Css Styles -->
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-<link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-<link rel="stylesheet" href="css/flaticon.css" type="text/css">
-<link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-<link rel="stylesheet" href="css/nice-select.css" type="text/css">
-<link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-<link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-<link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-<link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/font-awesome.min.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/elegant-icons.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/flaticon.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/owl.carousel.min.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/nice-select.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/jquery-ui.min.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/magnific-popup.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/slicknav.min.css" type="text/css">
+<link rel="stylesheet" href="/MaximusHotel/css/style.css" type="text/css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     const Toast = Swal.mixin({
@@ -34,5 +34,6 @@
         }
     });
 </script>
+
 
 
