--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -14,8 +14,8 @@
                 </style>
                 <div class="col-lg-2">
                     <div class="logo">
-                        <a href="index.html">
-                            <img src="img/logo.png" alt="">
+                        <a href="/MaximusHotel/index.html">
+                            <img src="/MaximusHotel/img/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -24,21 +24,21 @@
                     <div class="nav-menu">
                         <nav class="mainmenu">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="rooms.html">Rooms</a></li>
-                                <li><a href="about-us.html">About Us</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="/MaximusHotel/index.html">Home</a></li>
+                                <li><a href="/MaximusHotel/rooms.html">Rooms</a></li>
+                                <li><a href="/MaximusHotel/about-us.html">About Us</a></li>
+                                <li><a href="/MaximusHotel/contact.html">Contact</a></li>
                                 <li id="navProfile" style="display: none;"><a href="#!" style="display: inline-block; padding: 27px 0; margin-right: 42px; line-height: 16px; vertical-align: middle;">
-                                    <img id="navProfileImage" src="profile_img/default.jpg" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; vertical-align: middle; margin: 0; padding: 0;">
+                                    <img id="navProfileImage" src="/MaximusHotel/profile_img/default.jpg" alt="Profile" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; vertical-align: middle; margin: 0; padding: 0;">
                                     <i class="fa fa-user-circle" id="navProfileIcon" style="font-size: 1.8rem; vertical-align: middle; line-height: 16px; margin: 0; padding: 0;"></i>
                                 </a>
                                     <ul class="dropdown">
-                                        <li><a href="profile.html">My Profile</a></li>
-                                        <li><a href="myreservation.html">My Reservation</a></li>
+                                        <li><a href="/MaximusHotel/profile.html">My Profile</a></li>
+                                        <li><a href="/MaximusHotel/myreservation.html">My Reservation</a></li>
                                         <li><a href="#" id="navLogout">Logout</a></li>
                                     </ul>
                                 </li>
-                                <li id="navLogin" style="display: none;"><a href="login.html">Login</a></li>
+                                <li id="navLogin" style="display: none;"><a href="/MaximusHotel/login.html">Login</a></li>
                                 <script>
                                     // Immediately check localStorage to prevent flash and set profile image
                                     (function() {
@@ -107,5 +107,6 @@
     </div>
 </header>
 <!-- Header End -->
+
 
 
