--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -7,7 +7,7 @@
                     <div class="ft-about">
                         <div class="logo">
                             <a href="#">
-                                <img src="img/footer-logo.png" alt="">
+                                <img src="/MaximusHotel/img/footer-logo.png" alt="">
                             </a>
                         </div>
                         <p>Maximus Hotel stands as a premier destination for travelers<br /> making travel seamless and enjoyable</p>
@@ -41,7 +41,7 @@
                 <!--    </div>-->
                 <!--</div>-->
                 <div class="col-sm-4">
-                    <div style="background-image: url('img/floral-bg.jpg'); border-radius: 5px; background-size: cover; background-position: center; height: 100%; width: 100% !important;"></div>
+                    <div style="background-image: url('/MaximusHotel/img/floral-bg.jpg'); border-radius: 5px; background-size: cover; background-position: center; height: 100%; width: 100% !important;"></div>
                 </div>
             </div>
         </div>
@@ -77,5 +77,6 @@
 </body>
 
 </html>
+
 
 
