Fix API calls, add profile_img folder, fix image paths

--- a/css/style2.css
+++ b/css/style2.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background-image: url(/img/floral.png);
+  background-image: url(/MaximusHotel/img/floral.png);
   min-height: 100vh;
   display: flex;
   align-items: center;
