Fix all image paths - add /MaximusHotel/ prefix to room and profile images

--- a/layouts/mobilenav.html
+++ b/layouts/mobilenav.html
@@ -58,7 +58,7 @@
                                 
                                 const imagePath = (userData.image && userData.image.trim() && userData.image !== 'default.jpg') 
                                     ? `/profile_img/${userData.image}` 
-                                    : '/profile_img/default.jpg';
+                                    : '/MaximusHotel/profile_img/default.jpg';
                                 
                                 mobileProfileImage.src = imagePath;
                                 mobileProfileImage.style.display = 'block';
@@ -71,7 +71,7 @@
                                 
                                 const imagePath = (userData.image && userData.image.trim() && userData.image !== 'default.jpg') 
                                     ? `/profile_img/${userData.image}` 
-                                    : '/profile_img/default.jpg';
+                                    : '/MaximusHotel/profile_img/default.jpg';
                                 
                                 mobileProfileBottomImage.src = imagePath;
                                 mobileProfileBottomImage.style.display = 'block';
@@ -118,6 +118,7 @@
     </div>
 </div>
 <!-- Offcanvas Menu Section End -->
+
 
 
 
