--- a/views/profile.html
+++ b/views/profile.html
@@ -519,7 +519,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -574,6 +574,7 @@
     </script>
 </body>
 </html>
+
 
 
 
