--- a/views/users.html
+++ b/views/users.html
@@ -599,7 +599,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -654,6 +654,7 @@
     </script>
 </body>
 </html>
+
 
 
 
