--- a/views/bookings.html
+++ b/views/bookings.html
@@ -761,7 +761,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -811,6 +811,7 @@
     </script>
 </body>
 </html>
+
 
 
 
