--- a/views/index.html
+++ b/views/index.html
@@ -387,7 +387,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -438,6 +438,7 @@
     </script>
 </body>
 </html>
+
 
 
 
