--- a/views/room-categories.html
+++ b/views/room-categories.html
@@ -550,7 +550,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -605,6 +605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
