--- a/views/rooms.html
+++ b/views/rooms.html
@@ -656,7 +656,7 @@
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -692,6 +692,7 @@
     </script>
 </body>
 </html>
+
 
 
 
