--- a/views/profile.html
+++ b/views/profile.html
@@ -182,6 +182,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/MaximusHotel/js/auth.js"></script>
+    <script src="/MaximusHotel/js/config.js"></script>
     <script src="/MaximusHotel/js/admin-auth.js"></script>
     <script>
         const Toast = Swal.mixin({
