--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@
                     <span id="adminUserType" class="user-type">Admin</span>
                 </div>
                 <a href="/MaximusHotel/views/profile.html" style="text-decoration: none; color: inherit;">
-                    <img id="adminProfileImage" src="/MaximusHotel'/MaximusHotel/profile_img/default.jpg" alt="Admin" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; cursor: pointer;">
+                    <img id="adminProfileImage" src="/MaximusHotel/profile_img/default.jpg" alt="Admin" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover; border: 2px solid #084466; display: none; cursor: pointer;">
                     <i class="fas fa-user-circle" id="adminProfileIcon" style="font-size: 2rem; cursor: pointer;"></i>
                 </a>
             </div>
@@ -384,11 +384,11 @@
             const profileIcon = document.getElementById('adminProfileIcon');
             
             if (userData && userData.image) {
-                profileImage.src = `'/MaximusHotel/profile_img/${userData.image}`;
+                profileImage.src = `/MaximusHotel/profile_img/${userData.image}`;
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             } else {
-                profileImage.src = '/MaximusHotel'/MaximusHotel/profile_img/default.jpg';
+                profileImage.src = '/MaximusHotel/profile_img/default.jpg';
                 profileImage.style.display = 'block';
                 if (profileIcon) profileIcon.style.display = 'none';
             }
@@ -439,6 +439,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
