--- a/views/index.html
+++ b/views/index.html
@@ -354,7 +354,7 @@
                     timer: 1500,
                     timerProgressBar: true
                 }).then(() => {
-                    window.location.href = '/login.html';
+                    window.location.href = '/MaximusHotel/login.html';
                 });
             }
         });
@@ -439,6 +439,7 @@
     </script>
 </body>
 </html>
+
 
 
 
