--- a/views/profile.html
+++ b/views/profile.html
@@ -181,8 +181,8 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/MaximusHotel/js/auth.js"></script>
     <script src="/MaximusHotel/js/config.js"></script>
+    <script src="/MaximusHotel/js/auth.js"></script>
     <script src="/MaximusHotel/js/admin-auth.js"></script>
     <script>
         const Toast = Swal.mixin({
@@ -505,7 +505,7 @@
                     timer: 1500,
                     timerProgressBar: true
                 }).then(() => {
-                    window.location.href = '/login.html';
+                    window.location.href = '/MaximusHotel/login.html';
                 });
             }
         });
@@ -575,6 +575,7 @@
     </script>
 </body>
 </html>
+
 
 
 
