--- a/views/room-categories.html
+++ b/views/room-categories.html
@@ -162,8 +162,8 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/MaximusHotel/js/auth.js"></script>
     <script src="/MaximusHotel/js/config.js"></script>
+    <script src="/MaximusHotel/js/auth.js"></script>
     <script src="/MaximusHotel/js/admin-auth.js"></script>
     <script src="/MaximusHotel/js/admin-api.js"></script>
     <script>
@@ -517,7 +517,7 @@
                     timer: 1500,
                     timerProgressBar: true
                 }).then(() => {
-                    window.location.href = '/login.html';
+                    window.location.href = '/MaximusHotel/login.html';
                 });
             }
         });
@@ -567,7 +567,7 @@
                     text: 'Incharge users do not have access to this page.',
                     confirmButtonColor: '#084466'
                 }).then(() => {
-                    window.location.href = '/admin/index.html';
+                    window.location.href = '/MaximusHotel/views/index.html';
                 });
                 return false;
             }
@@ -606,6 +606,7 @@
     </script>
 </body>
 </html>
+
 
 
 
