--- a/views/users.html
+++ b/views/users.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/MaximusHotel/css/admin.css">
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
     <div class="sidebar">
